--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
-        "hdkey"
+        "hasher",
+        "hdkey",
+        "hmac",
+        "ripemd",
+        "secp",
+        "secp256k1",
+        "xpriv",
+        "xpub"
     ]
 }
