--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hdkey"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 license = "MIT"
 readme = "README.md"
@@ -19,7 +19,7 @@ opt-level = 'z'
 codegen-units = 1
 
 [features]
-std = ["secp256k1", "secp256k1/global-context"]
+std = ["secp256k1"]
 default = ["std"]
 global-context = ["std", "secp256k1/global-context"]
 
